--- a/css/style.css
+++ b/css/style.css
@@ -411,7 +411,110 @@ hr {
   display: flex;
 }
 
-.works_col {
-  flex: 1 1 0;
-  max-width: 450px;
+.works_image {
+  width: 421px;
+  height: 747px;
+}
+
+.footer {
+  background-color: #f8f8f8;
+}
+
+.footer_inner {
+  display: flex;
+  padding: 65px 0;
+  margin-top: -85px;
+}
+
+.footer_col {
+  width: 40%;
+}
+
+.footer_blog {
+  width: 29%;
+}
+
+.footer_inst {
+  width: 22%;
+}
+
+.footer_logo {
+  margin-bottom: 30px;
+  font-size: 46px;
+  font-weight: 700;
+  color:#ccc;
+}
+
+.footer_text {
+  margin-bottom: 30px;
+  font-size: 15px;
+  color: #999;
+}
+
+.footer_social {
+  margin-bottom: 34px;
+}
+
+.social_header b {
+  font-size: 18px;
+}
+
+.social_header {
+  padding-bottom: 15px;
+  border-bottom: 1px solid #e5e5e5;
+  font-size: 14px;
+  color: #333;
+}
+
+.social_content {
+  padding-top: 15px;
+  font-size: 15px;
+  color: #999;
+  font-style: italic;
+  font-weight: 300;
+}
+
+.social_content a {
+  color: #95e1d3;
+  font-size: 18px;
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 10px;
+}
+
+.subscribe {
+  width: 100%;
+  max-width: 380px;
+}
+
+.subscribe_btn {
+  font-family: 'Montserrat', sans-serif;
+  text-transform: uppercase;
+  background-color: #95e1d3;
+  border: 0;
+  color: white;
+  height: 40px;
+  width: 150px;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 700;
+  padding: 12px 30px;
+  line-height: 1.1;
+}
+
+.subscribe_input {
+  background: #fff;
+  height: 40px;
+  width: 220px;
+  border: 0;
+  color: #333;
+  font-family: 'Montserrat', sans-serif;
+  font-style: italic;
+  font-weight: 300;
+  font-size: 14px;
+  padding: 12px;
+}
+
+.subscribe_input::placeholder {
+  color: black;
 }
