--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,20 @@ hr {
   z-index: 1000;
 }
 
+.header--fix {
+  padding: 10px 0;
+
+  background-color: #eb8b8d;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+.header--fix:active {
+  background-color: #eb8b8d;
+}
+
 .header_inner {
   display: flex;
   justify-content: space-between;
@@ -89,6 +103,51 @@ hr {
 
 .nav_link:hover::after {
   opacity: 1;
+}
+
+.nav_burger {
+  width: 30px;
+  padding: 10px 0;
+  display: none;
+  border: 0;
+  background: none;
+  cursor: pointer;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 1;
+}
+
+.burger_item {
+  display: block;
+  width: 100%;
+  height: 3px;
+
+  background-color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+}
+
+.burger_item:before, .burger_item:after {
+  content: "";
+  width: 100%;
+  height: 3px;
+  background-color: #fff;
+  position: absolute;
+  left: 0;
+  z-index: 1;
+}
+
+.burger_item:before {
+  top: -8px;
+}
+
+.burger_item:after {
+  bottom: -8px;
 }
 
 .intro {
@@ -720,12 +779,31 @@ hr {
 
 @media (max-width: 770px) {
 
+  .header {
+    padding-top: 10px;
+  }
+
+  .nav_burger {
+    display: block;
+  }
+
   .intro {
     min-height: 650px;
   }
 
   .nav {
     display: none;
+    width: 100%;
+    top: 100%;
+    left: 0;
+    position: absolute;
+    background-color: #ed8b8d;
+  }
+
+  .nav_link {
+    display: block;
+    margin: 0;
+    padding: 8px 20px;
   }
 
   .slider_text {
